--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-notification-system-17",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React Notification System fully customized - React v17",
   "main": "dist/NotificationSystem.js",
   "scripts": {
@@ -33,7 +33,8 @@
   "homepage": "https://github.com/cristian-sima/react-notification-system-17",
   "dependencies": {
     "object-assign": "^4.0.1",
-    "prop-types": "^15.5.6"
+    "prop-types": "^15.5.6",
+    "create-react-class":"15.7.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
